--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 <body>
     <section id="Home">
-    <nav class="navbar-inverse" style="position: sticky;top:0;z-index:99999">
+    <nav class="navbar-inverse" style="position:sticky;top:0;z-index:99999">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
                 <span class="icon-bar"></span>
@@ -30,8 +30,9 @@
         <div class="collapse navbar-collapse" id="myNavbar">
         <ul class="nav navbar-nav">
             <li><a href="#Home">Home</a></li>
-            <li><a href="#">Achivements</a></li>
-            <li><a href="#">Campus view</a></li>
+            <li><a href="#campus">Campus Life</a></li>
+            <li><a href="#achivements">
+    Achivements</a></li>
             <li><a href="#contact">Contact Us</a></li>
             </ul>
         </div>
@@ -49,6 +50,48 @@ From the futuristic student-centric curriculum to state-of-the art facilities, p
 <br><br>
 As a dynamic and flexible educational institution, Johnson Grammar School constantly reinvents itself in line with changing trends so that students can be effectively groomed with a global outlook and a sense of responsibility towards the wider community. It is this ability along with freshness in approach that makes Johnson Grammar School a school of one of a kind.</h3>
         </section>
+    <hr>
+    <hr>
+    <section id="campus">
+        <h1>Our School Campus</h1>
+    <div class="school_mainDiv">
+        <img class="img-responsive" src="Play%20Ground.jpg">
+        <h4 class="text-left"><kbd>School PlayGround</kbd></h4>
+        <hr>
+        <h5 class="text-success text-left">Our Playground</h5>
+        <p class="text-muted text-left">We Enjoy A Lot When We Go To Our PlayGround</p>
+        </div>
+        <div class="school_mainDiv">
+        <img class="img-responsive" id="SA" src="WhatsApp%20Image%202021-07-23%20at%201.49.36%20PM.jpeg">
+        <h4 class="text-left"><kbd>School Auditorium</kbd></h4>
+        <hr>
+        <h5 class="text-success text-left">Our Autitorium</h5>
+        <p class="text-muted text-left">We Always Go To Auditorium For Every Competations,Event And Festivals</p>
+        </div>
+        <div class="school_mainDiv">
+        <img class="img-responsive" id="Sc" src="WhatsApp%20Image%202021-07-23%20at%201.55.57%20PM.jpeg">
+        <h4 class="text-left"><kbd>School Chemistry Lab</kbd></h4>
+        <hr>
+        <h5 class="text-success text-left">Our Chemistry Lab</h5>
+        <p class="text-muted text-left">We Love To Go To Chemistry Lab And We Enjoiy It A Lot</p>
+        </div>
+    </section>
+    <section id="achivements">
+    <h1>Our Achivements</h1>
+        <div class="bg-primary achivement_head" data-toggle="collapse" data-targer="#van_mahotsav">
+        <span class="glyphicon glyphicon-film"></span> Van Mahotsav<i class="fa fa-sort-desc"></i>
+            <div id="van_mahotsav" class="collapse">
+        <div class="col-lg-3 col-mg-3 col-sm-3 col-xs-12">
+        <img src="Vana%20Mahotsav.jpg" class="img-responsive img-thumbnail">
+            </div>
+            <div class="col-lg-9 col-mg-9 col-sm-9 col-xs-12 movie-text">
+            <h5 class="text-successive text-left">Van Mahotsav</h5>
+                <p>School Made Children To Plant Trees On Van Mahotsav</p>
+            </div>
+        </div>
+        </div>
+        
+    </section>
         <section id="contact">
     <div class="container">
             <div class="page-header col-lg-12 col-mg-12 col-sm-12 col-xs-12" id="contactUs">
