--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-    <section id="Home">
+    
     <nav class="navbar-inverse" style="position:sticky;top:0;z-index:99999">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
@@ -32,11 +32,12 @@
             <li><a href="#Home">Home</a></li>
             <li><a href="#campus">Campus Life</a></li>
             <li><a href="#achivements">
-    Achivements</a></li>
+    Achievements</a></li>
             <li><a href="#contact">Contact Us</a></li>
             </ul>
         </div>
     </nav>
+    <section id="Home">
         <div class="announcement">
         <marquee id="marqueeStyle"> ***Feel Free to ask queries at jgs.kuntloor@gmail.com*** </marquee>
         </div>
@@ -77,16 +78,28 @@ As a dynamic and flexible educational institution, Johnson Grammar School consta
         </div>
     </section>
     <section id="achivements">
-    <h1>Our Achivements</h1>
-        <div class="bg-primary achivement_head" data-toggle="collapse" data-targer="#van_mahotsav">
+    <h1>Our Achievements</h1>
+        <div class="bg-primary achivement_head" data-toggle="collapse" data-target="#van_mahotsav">
         <span class="glyphicon glyphicon-film"></span> Van Mahotsav<i class="fa fa-sort-desc"></i>
             <div id="van_mahotsav" class="collapse">
-        <div class="col-lg-3 col-mg-3 col-sm-3 col-xs-12">
+        <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
         <img src="Vana%20Mahotsav.jpg" class="img-responsive img-thumbnail">
             </div>
-            <div class="col-lg-9 col-mg-9 col-sm-9 col-xs-12 movie-text">
-            <h5 class="text-successive text-left">Van Mahotsav</h5>
-                <p>School Made Children To Plant Trees On Van Mahotsav</p>
+            <div class="col-lg-9 col-md-9 col-sm-9 col-xs-12 movie-text">
+            <h5 class="text-success text-left">Van Mahotsav</h5>
+                <p class="text-success">School Made Children To Plant Trees On Van Mahotsav</p>
+            </div>
+        </div>
+        </div>
+        <div class="bg-primary achivement_head" data-toggle="collapse" data-target="#best_waste">
+        <span class="glyphicon glyphicon-film"></span> Best Out Of Waste<i class="fa fa-sort-desc"></i>
+            <div id="best_waste" class="collapse">
+        <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12">
+        <img src="Best%20Out%20Of%20Waste.jpg" class="img-responsive img-thumbnail">
+            </div>
+            <div class="col-lg-9 col-md-9 col-sm-9 col-xs-12 movie-text">
+            <h5 class="text-success text-left">Best Out Of Waste</h5>
+                <p class="text-success">The School Made The Children To Think Creative And Make Best From The Waste</p>
             </div>
         </div>
         </div>
@@ -94,7 +107,7 @@ As a dynamic and flexible educational institution, Johnson Grammar School consta
     </section>
         <section id="contact">
     <div class="container">
-            <div class="page-header col-lg-12 col-mg-12 col-sm-12 col-xs-12" id="contactUs">
+            <div class="page-header col-lg-12 col-md-12 col-sm-12 col-xs-12" id="contactUs">
         <h2 class="text-capitalize">Contact Us</h2>
         </div>
         <div id="map">
